<resources>
    <string name="app_name">JuegoPreguntas</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_registro">Registrarse</string>
    <string name="et_correro">Correo electrónico...</string>
    <string name="et_contrasena">Contraseña...</string>
    <string name="btn_cerrar_sesion">Cerrar sesión</string>
    <string name="btn_inicioJuego">Iniciar partida</string>"
    <string name="btn_registro_partidas">Registro de partidas</string>
    <string name="btn_siguiente_pregunta">Siguiente pregunta</string>
    <string name="btn_finalizar_juego">Finalizar juego</string>
    <string name="lb_verdadera">Respuesta verdadera!</string>
    <string name="lb_falsa">Respuesta falsa!</string>
    <string name="lb_nombre_partida">Nombre partida:</string>
    <string name="lb_fecha_partida">Fecha partida:</string>"
    <string name="lb_puntuacion">Puntuación:</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_finalizar_pregunta">Finalizar pregunta</string>
    <string name="btn_volver_al_inicio">Volver al Inicio</string>
    <string name="btn_borrar">Borrar</string>
    <string name="btn_editar">Editar</string>
    <string name="lb_resultado_final">Has acertado %1$s preguntas</string>
    <string name="ir_a_web">Ir a web</string>
</resources>