<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_inicioJuego"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_inicioJuego"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btn_cerrar"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/btn_cerrar_sesion"
        app:layout_constraintEnd_toEndOf="@+id/btn_registro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_registro"
        app:layout_constraintTop_toBottomOf="@+id/btn_registro" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_portada" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/btn_registro_partidas"
        app:layout_constraintEnd_toEndOf="@+id/btn_inicioJuego"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_inicioJuego"
        app:layout_constraintTop_toBottomOf="@+id/btn_inicioJuego" />
</androidx.constraintlayout.widget.ConstraintLayout>